New upstream version 3.4.0

--- a/spectrwm.1
+++ b/spectrwm.1
@@ -1,6 +1,6 @@
 .\" Copyright (c) 2009-2012 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
-.\" Copyright (c) 2011-2018 Reginald Kennedy <rk@rejii.com>
+.\" Copyright (c) 2011-2020 Reginald Kennedy <rk@rejii.com>
 .\" Copyright (c) 2011-2012 Lawrence Teo <lteo@lteo.net>
 .\" Copyright (c) 2011-2012 Tiago Cunha <tcunha@gmx.com>
 .\" Copyright (c) 2012 David Hill <dhill@mindcry.org>
@@ -25,6 +25,15 @@
 .Nd window manager for X11
 .Sh SYNOPSIS
 .Nm spectrwm
+.Op Fl c Ar file
+.Op Fl v
+.Sh OPTIONS
+.Bl -tag -width Ds
+.It Fl c Ar file
+Specify a configuration file to load instead of scanning for one.
+.It Fl v
+Print version and exit.
+.El
 .Sh DESCRIPTION
 .Nm
 is a minimalistic window manager that tries to stay out of the way so that
@@ -141,6 +150,17 @@ LD_PRELOAD=/usr/lib/libswmhack.so.0.0 urxvtd -q -o -f
 Spawned programs automatically have
 .Pa LD_PRELOAD
 set when executed.
+.Pp
+It is advised to check the man page of
+.Pa ld.so
+as
+.Pa LD_PRELOAD
+is sometimes ignored by some operating systems.
+A workaround is available, e.g. launch an xterm(1) in workspace 2:
+.Bd -literal -offset indent
+autorun = ws[2]:xterm -name ws2
+quirk[XTerm:ws2] = WS[2]
+.Ed
 .It Ic bar_action
 External script that populates additional information in the status bar,
 such as battery life.
@@ -199,7 +219,7 @@ Any font defined here can then be selected in the status bar through the use of
 the markup sequence
 .Ic +@fn=n;
 where n is between 0 and 9.
-
+.Pp
 Also note that
 .Xr dmenu 1
 does not support Xft fonts.
@@ -276,7 +296,8 @@ It may contain the following character sequences:
 .It Li "+U" Ta "Urgency hint"
 .It Li "+V" Ta "Program version"
 .It Li "+W" Ta "Window name (from _NET_WM_NAME/WM_NAME)"
-.It Li "+|[weight][justify]" Ta "Marks the start of a new bar section"
+.It Li "+|[weight][justify]" Ta Begin new section and reset markup
+sequence effects.
 .Pp
 .Ic weight
 is a positive integer used to allocate horizontal space between 'L', 'C'
@@ -308,7 +329,11 @@ Any markup sequence found after +@stp will appear as normal characters in the
 status bar.
 .El
 .Pp
-Note: the effect of a markup sequence will not cross a section boundary.
+Note that markup sequences in
+.Ic bar_action
+script output will only be processed if
+.Ic bar_action_expand
+is enabled.
 .Pp
 All character sequences may limit its output to a specific length, for
 example +64A.
@@ -352,9 +377,6 @@ Disable by setting to 0
 so a custom clock could be used in the
 .Ic bar_action
 script.
-.It Ic iconic_enabled
-Display the number of iconic (minimized) windows in the status bar.
-Enable by setting to 1.
 .It Ic color_focus
 Border color of the currently focused window.
 Default is red.
@@ -417,11 +439,9 @@ and changes to layout.
 .It Ar manual
 Set window focus on window interaction only.
 .El
-.It Ic maximize_hide_bar
-When set to 1,
-.Ic maximize_toggle
-will also hide/restore the bar visibility of the affected workspace.
-Defaults to 0.
+.It Ic iconic_enabled
+Display the number of iconic (minimized) windows in the status bar.
+Enable by setting to 1.
 .It Ic keyboard_mapping
 Clear all key bindings (not button bindings) and load new bindings from the
 specified file.
@@ -430,6 +450,10 @@ See the
 .Sx KEYBOARD MAPPING FILES
 section below for a list of keyboard mapping files that have been provided
 for several keyboard layouts.
+.Pp
+Note that
+.Pa /dev/null
+can be specified if you only want to clear bindings.
 .It Ic layout
 Select layout to use at start-of-day.
 Defined in the format
@@ -466,6 +490,11 @@ the
 option.
 .Pp
 This setting is not retained at restart.
+.It Ic maximize_hide_bar
+When set to 1,
+.Ic maximize_toggle
+will also hide/restore the bar visibility of the affected workspace.
+Defaults to 0.
 .It Ic modkey
 Change mod key.
 Mod1 is generally the ALT key and Mod4 is the windows key on a PC.
@@ -572,14 +601,16 @@ See
 and
 .Ar stack_dec
 for more information.
-.It Ic workspace_clamp
-Prevents workspaces from being swapped when attempting to switch to a workspace
-that is mapped to another region.
-Use
-.Ar warp_focus
-if you want to focus on the region containing the workspace and
-.Ar warp_pointer
-if you want to also send the pointer.
+.It Ic warp_focus
+Focus on the target window/workspace/region when clamped.
+For example, when attempting to switch to a workspace that is mapped on another
+region and
+.Ar workspace_clamp
+is enabled, focus on the region with the target workspace.
+Enable by setting to 1.
+.It Ic warp_pointer
+Centers the pointer on the focused window when using bindings to change focus,
+switch workspaces, change regions, etc.
 Enable by setting to 1.
 .It Ic window_class_enabled
 Enable or disable displaying the window class name (from WM_CLASS) in the
@@ -599,16 +630,14 @@ the bar, it's limited to 64 characters, by default.
 See the
 .Ic bar_format
 option for more details.
-.It Ic warp_focus
-Focus on the target window/workspace/region when clamped.
-For example, when attempting to switch to a workspace that is mapped on another
-region and
-.Ar workspace_clamp
-is enabled, focus on the region with the target workspace.
-Enable by setting to 1.
-.It Ic warp_pointer
-Centers the pointer on the focused window when using bindings to change focus,
-switch workspaces, change regions, etc.
+.It Ic workspace_clamp
+Prevents workspaces from being swapped when attempting to switch to a workspace
+that is mapped to another region.
+Use
+.Ar warp_focus
+if you want to focus on the region containing the workspace and
+.Ar warp_pointer
+if you want to also send the pointer.
 Enable by setting to 1.
 .It Ic workspace_indicator
 Configure the status bar workspace indicator.
@@ -761,6 +790,8 @@ menu
 quit
 .It Cm M-q
 restart
+.It Aq Ar unbound
+restart_of_day
 .It Cm M- Ns Aq Cm Space
 cycle_layout
 .It Cm M-S-\e
@@ -930,6 +961,10 @@ Quit
 .It Cm restart
 Restart
 .Nm .
+.It Cm restart_of_day
+Same as
+.Ic restart
+but configuration file is loaded in full.
 .It Cm cycle_layout
 Cycle layout.
 .It Cm flip_layout
@@ -1183,6 +1218,10 @@ add:
 .Bd -literal -offset indent
 bind[program] = MOD+aring
 .Ed
+.Pp
+To clear all default keyboard bindings and specify your own, see the
+.Ic keyboard_mapping
+option.
 .Sh KEYBOARD MAPPING FILES
 Keyboard mapping files for several keyboard layouts are listed below.
 These files can be used with the
