--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-spectrwm (3.4.0-1) UNRELEASED; urgency=medium
+spectrwm (3.4.0-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Andrea Bolognani <eof@kiyuko.org>  Wed, 24 Jun 2020 21:32:50 +0200
+  * Patches
+    + Drop linux-Accept-user-provided-pkg-config-command.patch
+      - Merged upstream
+    + Drop linux-Install-examples.patch
+      - Merged upstream
+    + Drop Fix-man-warning.patch
+      - Merged upstream
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Wed, 24 Jun 2020 22:23:19 +0200
 
 spectrwm (3.3.0-1) unstable; urgency=medium
 
