--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+spectrwm (3.4.1-3) unstable; urgency=medium
+
+  * Patches
+    + Convert accepted forwarded patch to backport
+    + Fix tagging of Debian-specific patch
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 12 Feb 2023 16:55:17 +0100
+
 spectrwm (3.4.1-2) unstable; urgency=medium
 
   * Patches
