--- a/spectrwm.1
+++ b/spectrwm.1
@@ -1,6 +1,6 @@
 .\" Copyright (c) 2009-2012 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
-.\" Copyright (c) 2011-2020 Reginald Kennedy <rk@rejii.com>
+.\" Copyright (c) 2011-2023 Reginald Kennedy <rk@rejii.com>
 .\" Copyright (c) 2011-2012 Lawrence Teo <lteo@lteo.net>
 .\" Copyright (c) 2011-2012 Tiago Cunha <tcunha@gmx.com>
 .\" Copyright (c) 2012 David Hill <dhill@mindcry.org>
@@ -17,7 +17,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 29 2018 $
+.Dd $Mdocdate: October 21 2023 $
 .Dt SPECTRWM 1
 .Os
 .Sh NAME
@@ -31,6 +31,8 @@
 .Bl -tag -width Ds
 .It Fl c Ar file
 Specify a configuration file to load instead of scanning for one.
+.It Fl d
+Enable debug mode and logging to stderr.
 .It Fl v
 Print version and exit.
 .El
@@ -64,7 +66,7 @@ Named key or button
 .Pp
 .Nm
 is very simple in its use.
-Most of the actions are initiated via key or pointer bindings.
+Most of the actions are initiated via key or pointer button bindings.
 See the
 .Sx BINDINGS
 section below for defaults and customizations.
@@ -115,6 +117,20 @@ Enabling or disabling an option is done by using 1 or 0 respectively.
 Colors need to be specified per the
 .Xr XQueryColor 3
 specification.
+In addition, alpha transparency may be specified via the format
+.Li rbga : Ns Ar red Ns / Ns Ar green Ns / Ns Ar blue Ns / Ns Ar alpha
+(8-bit hex values)
+For example, to specify a 50% transparent blue status bar background:
+.Pp
+.Dl bar_color = rgba:00/00/ff/7f
+.Pp
+Note that a compositing manager is required for alpha transparency.
+.Pp
+Mark option values may be wrapped in single/double quotes to prevent
+whitespace trimming, specify empty strings, etc.
+Literal quote/backslash characters can be escaped with a backslash
+.Sq \e ,
+when needed.
 .Pp
 Comments begin with a #.
 When a literal
@@ -130,6 +146,10 @@ Defined in the format
 e.g. ws[2]:xterm launches an
 .Xr xterm 1
 in workspace 2.
+Specify
+.Sq ws[-1]
+to launch applications such as desktop managers and panels in free mode to keep
+them always mapped.
 .Pp
 Note that workspace mapping is handled via
 .Pa libswmhack.so .
@@ -172,27 +192,56 @@ character sequences in
 output; default is 0.
 .It Ic bar_at_bottom
 Place the statusbar at the bottom of each region instead of the top.
+Default is 0.
 .It Ic bar_border Ns Bq Ar x
-Border color of the status bar(s) in screen
+Border color of status bar(s) on screen number
 .Ar x .
+Default is rgb:00/80/80.
+.It Ic bar_border_free Ns Bq Ar x
+Border color of a status bar for a focused region on screen number
+.Ar x
+when a workspace-free window is focused.
+Default is rgb:80/80/00.
 .It Ic bar_border_unfocus Ns Bq Ar x
-Border color of the status bar(s) on unfocused region(s) in screen
+Border color of status bar(s) for unfocused region(s) on screen number
 .Ar x .
+Default is rgb:00/40/40.
 .It Ic bar_border_width
 Set status bar border thickness in pixels.
 Disable border by setting to 0.
 .It Ic bar_color Ns Bq Ar x
-Background color of the status bar(s) in screen
+Background color of status bar(s) on screen number
 .Ar x .
 .Pp
 A comma separated list of up to 10 colors can be specified.
 The first value is used as the default background color.
 Any of these colors can then be selected as a background color in the status
 bar through the use of the markup sequence
-.Ic +@bg=n;
+.Ic +@bg=n;\&
 where n is between 0 and 9.
+.It Ic bar_color_free Ns Bq Ar x
+Background color of a status bar for a focused region on screen number
+.Ar x
+when a workspace-free window is focused.
+.Pp
+A comma separated list of up to 10 colors can be specified, with the same
+syntax and behavior as
+.Ic bar_color .
+Default is rgb:40/40/00.
+.It Ic bar_color_unfocus Ns Bq Ar x
+Background color of status bar(s) for unfocused region(s) on screen number
+.Ar x .
+.Pp
+A comma separated list of up to 10 colors can be specified, with the same
+syntax and behavior as
+.Ic bar_color
+for unfocused bar(s).
+Defaults to the value of
+.Ic bar_color .
 .It Ic bar_color_selected Ns Bq Ar x
-Background color for selections on the status bar(s) in screen
+Background color for selected
+.Cm menu
+items on screen number
 .Ar x .
 Defaults to the value of
 .Ic bar_border .
@@ -219,12 +268,12 @@ If Xft is used, a comma-separated list of up to 10 fonts can be specified.
 The first entry is the default font.
 Any font defined here can then be selected in the status bar through the use of
 the markup sequence
-.Ic +@fn=n;
+.Ic +@fn=n;\&
 where n is between 0 and 9.
 .Pp
 Also note that
 .Xr dmenu 1
-does not support Xft fonts.
+prior to 4.6 does not support Xft fonts.
 .Pp
 Xft examples:
 .Bd -literal -offset indent
@@ -252,22 +301,35 @@ The
 .Xr xfontsel 1
 application can help with the XLFD setting.
 .It Ic bar_font_color Ns Bq Ar x
-Foreground color of the status bar(s) in screen
+Foreground color of the status bar(s) on screen number
 .Ar x .
 .Pp
 A comma separated list of up to 10 colors can be specified.
 The first value is used as the default foreground color.
 Any of these colors can then be selected as a foreground color in the status
 bar through the use of the markup sequence
-.Ic +@fg=n;
+.Ic +@fg=n;\&
 where n is between 0 and 9.
+.It Ic bar_font_color_unfocus Ns Bq Ar x
+Foreground color of status bar(s) for unfocused region(s) on screen number
+.Ar x .
+.Pp
+A comma separated list of up to 10 colors can be specified, with the same
+syntax and behavior as
+.Ic bar_font_color
+for unfocused bar(s).
+Defaults to the value of
+.Ic bar_font_color .
 .It Ic bar_font_color_selected Ns Bq Ar x
-Foreground color for selections on the status bar(s) in screen
+Foreground color for selected
+.Cm menu
+items on screen number
 .Ar x .
 Defaults to the value of
 .Ic bar_color .
 .It Ic bar_font_pua
-Specify a font which uses the Unicode Private Use Area (U+E000 -> U+F8FF).
+Specify a font to override the Unicode Private Use Area code points
+(U+E000 -> U+F8FF, U+F0000 -> U+FFFFD, U+100000 -> U+10FFFD).
 Some fonts use these code points to provide special icon glyphs.
 Available only with Xft fonts.
 .It Ic bar_format
@@ -286,7 +348,7 @@ It may contain the following character sequences:
 .It Li "+A" Ta "Output of the external script"
 .It Li "+C" Ta "Window class (from WM_CLASS)"
 .It Li "+D" Ta "Workspace name"
-.It Li "+F" Ta "Floating indicator"
+.It Li "+F" Ta "Focus status indicator"
 .It Li "+I" Ta "Workspace index"
 .It Li "+L" Ta "Workspace list indicator"
 .It Li "+M" Ta "Number of iconic (minimized) windows in workspace"
@@ -297,6 +359,7 @@ It may contain the following character sequences:
 .It Li "+T" Ta "Window instance (from WM_CLASS)"
 .It Li "+U" Ta "Urgency hint"
 .It Li "+V" Ta "Program version"
+.It Li "+w" Ta "Number of windows in workspace"
 .It Li "+W" Ta "Window name (from _NET_WM_NAME/WM_NAME)"
 .It Li "+|[weight][justify]" Ta Begin new section and reset markup
 sequence effects.
@@ -320,13 +383,13 @@ is used.
 The currently recognized text markup sequences are:
 .Bl -column "Character sequence" "Action" -offset indent
 .It Sy "Character sequence" Ta Sy "Action"
-.It Li "+@fn=n;" Ta Selects font n (from 0 to 9) from
+.It Li "+@fn=n;\&" Ta Selects font n (from 0 to 9) from
 .Ic bar_font .
-.It Li "+@fg=n;" Ta Selects foreground color n (from 0 to 9) from
+.It Li "+@fg=n;\&" Ta Selects foreground color n (from 0 to 9) from
 .Ic bar_font_color .
-.It Li "+@bg=n;" Ta Selects background color n (from 0 to 9) from
+.It Li "+@bg=n;\&" Ta Selects background color n (from 0 to 9) from
 .Ic bar_color .
-.It Li "+@stp;" Ta Stops the interpretation of markup sequences.
+.It Li "+@stp;\&" Ta Stops the interpretation of markup sequences.
 Any markup sequence found after +@stp will appear as normal characters in the
 status bar.
 .El
@@ -345,7 +408,7 @@ The padding/alignment can be enabled using a '_' character in the sequence.
 For example: +_64W, +64_W and +_64_W enable padding before (right alignment),
 after (left alignment), and both before and after (center alignment) window
 name, respectively.
-Any characters that don't match the specification are copied as-is.
+Any characters that do not match the specification are copied as-is.
 .It Ic bar_justify
 Justify the status bar text.
 Possible values are
@@ -373,11 +436,35 @@ Set region containment boundary width in pixels.
 This is how far a window must be dragged/resized (with the pointer) beyond the
 region edge before it is allowed outside the region.
 Disable the window containment effect by setting to 0.
+.It Ic cancelkey
+Change the key used as an alternative means of terminating move/resize
+operations.
+Default is Escape.
+.Pp
+See the
+.Sx BINDINGS
+section below for details on how to find key names.
+.It Ic click_to_raise
+Enable or disable raising stacking priority when clicking on a window.
+Default is 1.
 .It Ic clock_enabled
 Enable or disable displaying the clock in the status bar.
 Disable by setting to 0 so a custom clock could be used in the
 .Ic bar_action
 script.
+.It Ic color_free_focus
+Border color of the currently focused window that is in free mode.
+Default is yellow.
+.It Ic color_free_focus_maximized
+Border color of the currently focused maximized window that is in free mode.
+Defaults to the value of
+.Ic color_free_focus .
+.It Ic color_free_unfocus
+Border color of unfocused windows that are in free mode, default is rgb:88/88/00.
+.It Ic color_free_unfocus_maximized
+Border color of unfocused maximized windows that are in free mode.
+Defaults to the value of
+.Ic color_free_unfocus .
 .It Ic color_focus
 Border color of the currently focused window.
 Default is red.
@@ -391,17 +478,35 @@ Border color of unfocused windows, default is rgb:88/88/88.
 Border color of unfocused, maximized windows.
 Defaults to the value of
 .Ic color_unfocus .
+.It Ic cycle_visible
+Include workspaces that are mapped when switching with
+.Ic ws_next ,
+.Ic ws_prev ,
+.Ic ws_next_all ,
+.Ic ws_prev_all ,
+.Ic ws_next_move ,
+or
+.Ic ws_prev_move .
+Enable by setting to 1.
+.Pp
+Note that mapped workspaces will be swapped unless
+.Ic workspace_clamp
+is enabled.
+If
+.Ic warp_focus
+is also enabled, focus will go to the region where the workspace is mapped.
 .It Ic dialog_ratio
 Some applications have dialogue windows that are too small to be useful.
-This ratio is the screen size to what they will be resized.
-For example, 0.6 is 60% of the physical screen size.
+This ratio adjusts the window/region size ratio for transient windows
+having the TRANSSZ quirk.
+For example, 0.6 is 60% of the the monitor size if the current region spans
+the monitor.
 .It Ic disable_border
 Remove border when bar is disabled and there is only one window on the region.
 Enable by setting to 1.
 Setting this to
 .Ar always
-removes border from lone tiled windows, regardless of the bar being
-enabled/disabled.
+removes the border regardless of the bar being enabled/disabled.
 Defaults to 0.
 .It Ic focus_close
 Window to put focus when the focused window is closed.
@@ -409,12 +514,16 @@ Possible values are
 .Ar first ,
 .Ar next ,
 .Ar previous
-(default) and
-.Ar last .
+(default),
+.Ar last
+and
+.Ar prior .
 .Ar next
 and
 .Ar previous
 are relative to the window that is closed.
+.Ar prior
+is the last focused window in the workspace.
 .It Ic focus_close_wrap
 Whether to allow the focus to jump to the last window when the first window
 is closed or vice versa.
@@ -426,6 +535,35 @@ Possible values are
 and
 .Ar last
 (default).
+.It Ic focus_mark_none
+Set the
+.Ic bar_format
+focus status indicator (+F) string to substitute when no window is focused.
+Default is ''.
+.It Ic focus_mark_normal
+Set the
+.Ic bar_format
+focus status indicator (+F) string to substitute when a normal (not floating,
+maximized or free) window is focused.
+Default is ''.
+.It Ic focus_mark_floating
+Set the
+.Ic bar_format
+focus status indicator (+F) string to substitute when a floating window is
+focused.
+Default is '(f)'.
+.It Ic focus_mark_free
+Set the
+.Ic bar_format
+focus status indicator (+F) string to substitute when a window that is in
+free mode is focused.
+Default is '(*)'.
+.It Ic focus_mark_maximized
+Set the
+.Ic bar_format
+focus status indicator (+F) string to substitute when a maximized window is
+focused.
+Default is '(m)'.
 .It Ic focus_mode
 Window focus behavior with respect to the pointer.
 Possible values:
@@ -440,6 +578,37 @@ and changes to layout.
 .It Ar manual
 Set window focus on window interaction only.
 .El
+.It Ic fullscreen_hide_other
+When a fullscreen window is focused and not in
+.Ic below
+state, hide unrelated windows in the same workspace.
+Useful for transparent windows.
+Defaults to 0.
+.It Ic fullscreen_unfocus
+Set handling when a fullscreen window loses focus.
+Possible values:
+.Pp
+.Bl -tag -width "quick_belowXXX" -offset indent -compact
+.It Ar none
+Leave window fullscreen.
+(default)
+.It Ar restore
+Exit fullscreen.
+.It Ar iconify
+Minimize/hide the window.
+.It Ar float
+Exit fullscreen and float window.
+.It Ar below
+Set
+.Ic below
+state on the window.
+.It Ar quick_below
+Set
+.Ic below
+state on the window, unset when refocused.
+.El
+.Pp
+Note that this option is ignored in max layout.
 .It Ic iconic_enabled
 Display the number of iconic (minimized) windows in the status bar.
 Enable by setting to 1.
@@ -460,7 +629,7 @@ Select layout to use at start-of-day.
 Defined in the format
 .Li ws Ns Bo Ar idx Bc : Ns Ar master_grow : Ns Ar master_add : Ns Ar \
 stack_inc : Ns Ar always_raise : Ns Ar stack_mode ,
-e.g. ws[2]:-4:0:1:0:horizontal sets worskspace 2 to the horizontal stack mode,
+e.g. ws[2]:-4:0:1:0:horizontal sets workspace 2 to the horizontal stack mode,
 shrinks the master area by 4 ticks and adds one window to the stack, while
 maintaining default floating window behavior.
 Possible
@@ -469,9 +638,10 @@ values are
 .Ar vertical ,
 .Ar vertical_flip ,
 .Ar horizontal ,
-.Ar horizontal_flip
+.Ar horizontal_flip ,
+.Ar max
 and
-.Ar max .
+.Ar floating .
 .Pp
 See
 .Ic master_grow ,
@@ -491,14 +661,74 @@ the
 option.
 .Pp
 This setting is not retained at restart.
+.It Ic max_layout_maximize
+Automatically maximize windows in max layout.
+Note that automatic maximize behavior is disabled for windows that are
+unmaximized in max layout.
+Maximizing the window or resetting the layout with
+.Ic stack_reset
+enables it again.
+Enabled by default.
+Disable by setting to 0.
 .It Ic maximize_hide_bar
 When set to 1,
 .Ic maximize_toggle
 will also hide/restore the bar visibility of the affected workspace.
 Defaults to 0.
+.It Ic maximize_hide_other
+When a maximized window is focused and not in
+.Ic below
+state, hide unrelated windows in the same workspace.
+Useful for transparent windows.
+Defaults to 0.
+.It Ic maximized_unfocus
+Set handling when a maximized window loses focus.
+Possible values:
+.Pp
+.Bl -tag -width "quick_belowXXX" -offset indent -compact
+.It Ar none
+Leave window maximized.
+.It Ar restore
+Unmaximize window.
+(default)
+.It Ar iconify
+Minimize/hide the window.
+.It Ar float
+Unmaximize and float window.
+.It Ar below
+Set
+.Ic below
+state on the window.
+.It Ar quick_below
+Set
+.Ic below
+state on the window, unset when refocused.
+.El
+.Pp
+Note that this option is ignored in max layout.
 .It Ic modkey
-Change mod key.
-Mod1 is generally the ALT key and Mod4 is the windows key on a PC.
+Change the current modifier value of
+.Ic MOD
+in
+.Ic bind
+entries that come later in the configuration file.
+For existing bindings, the new value is substituted for the previous value.
+Possible values are
+.Ar Mod1
+(default),
+.Ar Mod2 ,
+.Ar Mod3 ,
+.Ar Mod4
+and
+.Ar Mod5 .
+.Pp
+.Ar Mod1
+is generally the Alt key,
+.Ar Mod2
+is the Command key on macOS and
+.Ar Mod4
+is the Windows key on a PC.
+The current modifier key mapping can be found by running xmodmap(1).
 .It Ic name
 Set the name of a workspace at start-of-day.
 Defined in the format
@@ -523,19 +753,34 @@ See the
 .Sx QUIRKS
 section below.
 .It Ic region
-Allocates a custom region, removing any autodetected regions which occupy the
-same space on the screen.
+Allocates a custom region, removing any autodetected regions that occupy the
+same space on the specified logical X screen number.
 Defined in the format
 .Li screen Ns Bo Ar idx Ns Bc : Ns Ar width Ns x Ns Ar height Ns + Ns Ar x Ns \
-+ Ns Ar y ,
-e.g. screen[1]:800x1200+0+0.
++ Ns Ar y Ns Bo , Ns Ar rotation Bc ,
+e.g. screen[1]:800x1200+0+0 or screen[1]:800x1200+0+0,inverted (with optional
+rotation).
 .Pp
 To make a region span multiple monitors, create a region big enough to cover
 them all, e.g. screen[1]:2048x768+0+0 makes the region span two monitors with
 1024x768 resolution sitting one next to the other.
+.Pp
+Possible values for the optional rotation argument are
+.Ar normal
+(default),
+.Ar left ,
+.Ar inverted
+and
+.Ar right .
+Note that rotation is used by
+.Ic workspace_autorotate .
 .It Ic region_padding
 Pixel width of empty space within region borders.
 Disable by setting to 0.
+.It Ic snap_range
+Set the distance in pixels a tiled/maximized window must be moved (with the
+pointer) to unsnap and float freely.
+Set to 0 to unsnap immediately. Default is 25.
 .It Ic spawn_position
 Position in stack to place newly spawned windows.
 Possible values are
@@ -551,6 +796,48 @@ and
 are relative to the focused window.
 .It Ic stack_enabled
 Enable or disable displaying the current stacking algorithm in the status bar.
+.It Ic stack_mark_floating
+Set the
+.Ar floating
+layout mark for the
+.Ic bar_format
+stacking indicator (+S).
+Default is '[~]'.
+.It Ic stack_mark_horizontal
+Set the
+.Ar horizontal
+layout mark for the
+.Ic bar_format
+stacking indicator (+S).
+Default is '[-]'.
+.It Ic stack_mark_horizontal_flip
+Set the
+.Ar horizontal_flip
+layout mark for the
+.Ic bar_format
+stacking indicator (+S).
+Default is '[v]'.
+.It Ic stack_mark_max
+Set the
+.Ar max
+layout mark for the
+.Ic bar_format
+stacking indicator (+S).
+Default is '[ ]'.
+.It Ic stack_mark_vertical
+Set the
+.Ar vertical
+layout mark for the
+.Ic bar_format
+stacking indicator (+S).
+Default is '[|]'.
+.It Ic stack_mark_vertical_flip
+Set the
+.Ar vertical_flip
+layout mark for the
+.Ic bar_format
+stacking indicator (+S).
+Default is '[>]'.
 .It Ic term_width
 Set a preferred minimum width for the terminal.
 If this value is greater than 0,
@@ -627,10 +914,15 @@ Enable or disable displaying the window display name
 Enable by setting to 1.
 .Pp
 To prevent excessively large window names from pushing the remaining text off
-the bar, it's limited to 64 characters, by default.
+the bar, it is limited to 64 characters, by default.
 See the
 .Ic bar_format
 option for more details.
+.It Ic workspace_autorotate
+When moving workspaces across regions, auto-rotate vertical/horizontal layouts
+based on rotation data from
+.Xr xrandr 1 .
+Enable by setting to 1.
 .It Ic workspace_clamp
 Prevents workspaces from being swapped when attempting to switch to a workspace
 that is mapped to another region.
@@ -662,17 +954,110 @@ Include all workspaces.
 Always exclude the current workspace from the list.
 .It Ar markcurrent
 Indicate the current workspace if it is in the list.
+.It Ar markactive
+Indicate workspaces in the list that are active.
+.It Ar markempty
+Indicate workspaces in the list that are empty.
 .It Ar markurgent
 Indicate workspaces in the list that contain urgent window(s).
 .It Ar printnames
 Display the names of named workspaces in the list.
+.It Ar noindexes
+Hide the index of the workspaces.
 .El
 .Pp
 The default is
 .Ar listcurrent , Ns Ar listactive , Ns Ar markcurrent , Ns Ar printnames
+.Pp
+Note that markup sequences can be used to style the workspace indicator.
+For example, to change the color of the current workspace:
+.Bd -literal -offset indent
+workspace_mark_current = '+@fg=1;'
+workspace_mark_current_suffix = '+@fg=0;'
+.Ed
+.It Ic workspace_mark_active
+Set the string inserted before active workspaces in the
+.Ic workspace_indicator .
+Default is '^'.
+.It Ic workspace_mark_active_suffix
+Set the string inserted after active workspaces in the
+.Ic workspace_indicator .
+Default is '' (empty string).
+.It Ic workspace_mark_current
+Set the string inserted before the current workspace in the
+.Ic workspace_indicator .
+Default is '*'.
+.It Ic workspace_mark_current_suffix
+Set the string inserted after the current workspace in the
+.Ic workspace_indicator .
+Default is '' (empty string).
+.It Ic workspace_mark_empty
+Set the string inserted before empty workspaces in the
+.Ic workspace_indicator .
+Default is '-'.
+.It Ic workspace_mark_empty_suffix
+Set the string inserted after empty workspaces in the
+.Ic workspace_indicator .
+Default is '' (empty string).
+.It Ic workspace_mark_urgent
+Set the string inserted before urgent workspaces in the
+.Ic workspace_indicator .
+Default is '!'.
+.It Ic workspace_mark_urgent_suffix
+Set the string inserted after urgent workspaces in the
+.Ic workspace_indicator .
+Default is '' (empty string).
 .It Ic workspace_limit
 Set the total number of workspaces available.
 Minimum is 1, maximum is 22, default is 10.
+.El
+.Sh STACK MODES
+.Bl -tag -width "horizontal flipped"
+.It Ic vertical
+Master area is on the left and stack area is on the right.
+Additional windows are vertically tiled in stack area.
+.It Ic vertical flipped
+Same as above but stack and master areas are swapped.
+.It Ic horizontal
+Master area is on the top and stack area is on the bottom.
+Additional windows are horizontally tiled in stack area.
+.It Ic horizontal flipped
+Same as above but stack and master areas are swapped.
+.It Ic max
+The focused window occupies the whole region, except for the bar (if enabled).
+.It Ic floating
+Windows are untiled and can be resized and positioned.
+.El
+.Sh WINDOW STATES
+These can be set/unset by the corresponding
+.Ic toggle
+actions listed in the
+.Sx BINDINGS
+section below.
+.Bl -tag -width "fullscreen"
+.It Ic floating
+The window is stacked above others and is not in a tile;
+it may be freely resized and positioned.
+.It Ic below
+The window is floating, but stacked below others.
+.It Ic maximized
+The window occupies the work area of the region (area that excludes space
+reserved by the bar, docks/panels, etc.)
+By default, focusing another window removes the maximized state of the window.
+See
+.Ic maximized_unfocus
+to configure unfocused behavior.
+.It Ic fullscreen
+The window occupies the whole region.
+By default, focusing another window does not remove the fullscreen state of the
+window.
+See
+.Ic fullscreen_unfocus
+to configure unfocused behavior.
+.It Ic free
+The window is floating, but not bound by regions, workspaces or their layouts.
+It is always mapped, unless iconified, and may be resized and positioned
+anywhere.
 .El
 .Sh PROGRAMS
 .Nm
@@ -702,7 +1087,7 @@ Remember that when using
 .Ql #
 in your program call, it must be escaped with a backslash, i.e. \e#
 .Pp
-The following argument variables will be substituted for values at the time the
+The following argument variables are replaced with values at the time the
 program is spawned:
 .Pp
 .Bl -tag -width "$bar_font_color" -offset indent -compact
@@ -775,7 +1160,8 @@ bind[] = MOD+Shift+Delete
 .Ed
 .Sh BINDINGS
 .Nm
-provides many functions (or actions) accessed via key or pointer bindings.
+provides many functions (or actions) accessed via key or pointer button
+bindings.
 .Pp
 The default bindings are listed below:
 .Pp
@@ -803,11 +1189,15 @@ cycle_layout
 .It Cm M-S-\e
 flip_layout
 .It Aq Ar unbound
+prior_layout
+.It Aq Ar unbound
 layout_vertical
 .It Aq Ar unbound
 layout_horizontal
 .It Aq Ar unbound
 layout_max
+.It Aq Ar unbound
+layout_floating
 .It Cm M-S- Ns Aq Cm Space
 stack_reset
 .It Aq Ar unbound
@@ -838,6 +1228,10 @@ focus_next
 focus_prev
 .It Cm M-m
 focus_main
+.It Cm M-\(ga
+focus_free
+.It Cm M-S-a
+focus_prior
 .It Cm M-u
 focus_urgent
 .It Cm M-S-j
@@ -898,6 +1292,10 @@ screenshot_wind
 version
 .It Cm M-t
 float_toggle
+.It Cm M-S-t
+below_toggle
+.It Cm M-S-\(ga
+free_toggle
 .It Cm M-S- Ns Aq Cm Delete
 lock
 .It Cm M-S-i
@@ -938,6 +1336,10 @@ name_workspace
 search_workspace
 .It Cm M-f
 search_win
+.It Cm M-d
+debug_toggle (debug mode only)
+.It Cm M-S-d
+dumpwins (debug mode only)
 .El
 .Pp
 The action names and descriptions are listed below:
@@ -972,15 +1374,19 @@ Same as
 .Ic restart
 but configuration file is loaded in full.
 .It Cm cycle_layout
-Cycle layout.
+Switch to the next layout.
 .It Cm flip_layout
 Swap the master and stacking areas.
+.It Cm prior_layout
+Switch to the last used layout.
 .It Cm layout_vertical
 Switch to vertical layout.
 .It Cm layout_horizontal
 Switch to horizontal layout.
 .It Cm layout_max
 Switch to max layout.
+.It Cm layout_floating
+Switch to floating layout.
 .It Cm stack_reset
 Reset layout.
 .It Cm stack_balance
@@ -1005,6 +1411,10 @@ Focus next window in workspace.
 Focus previous window in workspace.
 .It Cm focus_main
 Focus on main window in workspace.
+.It Cm focus_prior
+Focus last focused window in workspace.
+.It Cm focus_free
+Focus on a window in free mode, if any.
 .It Cm focus_urgent
 Focus on next window with the urgency hint flag set.
 The workspace is switched if needed.
@@ -1017,9 +1427,9 @@ Toggle overall visibility of status bars.
 .It Cm bar_toggle_ws
 Toggle status bar on current workspace.
 .It Cm wind_del
-Delete current window in workspace.
+Delete current window.
 .It Cm wind_kill
-Destroy current window in workspace.
+Kill the program that created the current window.
 .It Cm ws_ Ns Ar n
 Switch to workspace
 .Ar n ,
@@ -1073,9 +1483,9 @@ Switch to next region.
 .It Cm rg_prev
 Switch to previous region.
 .It Cm rg_move_next
-Switch region to next screen.
+Switch to next region and move current workspace.
 .It Cm rg_move_prev
-Switch region to previous screen.
+Switch to previous region and move current workspace.
 .It Cm screenshot_all
 Take screenshot of entire screen (if enabled) (see
 .Sx PROGRAMS
@@ -1088,6 +1498,12 @@ above).
 Toggle version in status bar.
 .It Cm float_toggle
 Toggle focused window between tiled and floating.
+.It Cm below_toggle
+Toggle
+.Ic below
+state on current window.
+.It Cm free_toggle
+Toggle focused window between workspace mode and free mode.
 .It Cm lock
 Lock screen (see
 .Sx PROGRAMS
@@ -1134,6 +1550,12 @@ Name the current workspace.
 Search for a workspace.
 .It Cm search_win
 Search the windows in the current workspace.
+.It Cm debug_toggle
+Toggles debug overlay.
+(debug mode only)
+.It Cm dumpwins
+Dump current window/focus/stacking state to debug log.
+(debug mode only)
 .El
 .Pp
 Custom bindings in the configuration file are specified as follows:
@@ -1144,7 +1566,7 @@ Custom bindings in the configuration file are specified as follows:
 is one of the actions listed above (or empty to unbind) and
 .Ar combo
 is in the form of zero or more modifier keys and/or special arguments
-(Mod1, Shift, MOD, etc.) and a normal key (b, Space, etc)
+(Mod1, Shift, Control, MOD, etc.) and a normal key (b, Space, etc)
 or a button (Button1 .. Button255), separated by
 .Ql + .
 Multiple key/button combinations may be bound to the same action.
@@ -1317,7 +1739,7 @@ Remove border when window is unfocused and floating.
 Remove from normal focus cycle (focus_prev or focus_next). The window can still
 be focused using search_win.
 .It NOFOCUSONMAP
-Don't change focus to the window when it first appears on the screen.
+Do not change focus to the window when it first appears on the screen.
 Has no effect when
 .Ic focus_mode
 is set to
@@ -1335,6 +1757,8 @@ Adjusts size on transient windows that are too small using
 .It WS Ns Bq Ar n
 Force a new window to appear on workspace
 .Ar n .
+Specify -1 to put the window into free mode so that it is mapped independent
+of workspaces and regions.
 .It XTERM_FONTADJ
 Adjust
 .Xr xterm 1
@@ -1356,7 +1780,7 @@ to and
 is one of the quirks from the list above.
 .Pp
 Note that patterns are interpreted as POSIX Extended Regular Expressions.
-Any ':', '[' or ']' must be escaped with '\\'.
+Any ':', '[' or ']' must be escaped with '\e'.
 See
 .Xr regex 7
 for more information on POSIX Extended Regular Expressions.
@@ -1370,7 +1794,7 @@ quirk[.*:.*:.*] = FLOAT # Same as above.
 quirk[Firefox:Navigator] = FLOAT # Float all Firefox browser windows.
 quirk[::Console] = FLOAT # Float windows with WM_CLASS not set and a \
 window name of 'Console'.
-quirk[\\[0-9\\].*:.*:\\[\\[\\:alnum\\:\\]\\]*] = FLOAT # Float windows with \
+quirk[\e[0-9\e].*:.*:\e[\e[\e:alnum\e:\e]\e]*] = FLOAT # Float windows with \
 WM_CLASS class beginning with a number, any WM_CLASS instance and a \
 _NET_WM_NAME/WM_NAME either blank or containing alphanumeric characters \
 without spaces.
@@ -1449,7 +1873,7 @@ and
 .Xr grep 1 :
 .Bd -literal -offset indent
 $ WINDOWID=`xprop \-root _NET_ACTIVE_WINDOW | grep \-o "0x.*"`
-$ xprop \-id $WINDOWID _NET_WM_NAME | grep \-o "\\".*\\""
+$ xprop \-id $WINDOWID _NET_WM_NAME | grep \-o "\e".*\e""
 .Ed
 .Pp
 A window can be focused by sending a _NET_ACTIVE_WINDOW client message to the
@@ -1481,13 +1905,13 @@ For example, the following toggles the floating state of a window using
 to send the message (assuming 0x4a0000b is the id of the window to be floated
 or un-floated):
 .Bd -literal -offset indent
-$ wmctrl \-i \-r 0x4a0000b \-b toggle,_NET_WM_STATE_ABOVE
+$ wmctrl \-i \-r 0x4a0000b \-b toggle,above
 .Ed
 .Pp
 Windows can also be iconified and un-iconified by substituting
 _NET_WM_STATE_HIDDEN for _NET_WM_STATE_ABOVE in the previous example:
 .Bd -literal -offset indent
-$ wmctrl \-i \-r 0x4a0000b \-b toggle,_NET_WM_STATE_HIDDEN
+$ wmctrl \-i \-r 0x4a0000b \-b toggle,hidden
 .Ed
 .Pp
 Floating windows can also be resized and moved by sending a
