--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+spectrwm (3.5.1-1) unstable; urgency=medium
+
+  * New upstream release
+
+  * Patches
+    + Drop backports
+    + Update debian/Change-default-programs.patch
+      - Reflect Debian-specific default programs in
+        /etc/spectrwm.conf too
+
+  * Package relationships
+    + Add Build-Depends on libfontconfig-dev
+      - New dependency introduced upstream
+    + Drop Build-Depends on libxtst-dev and libxcb-xfixes0-dev
+      - No longer needed
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 07 Jan 2024 17:50:24 +0100
+
 spectrwm (3.4.1-3) unstable; urgency=medium
 
   * Patches
